[package]
name = "crud-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3"
poem-openapi = { version = "3.0", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate" ] }
async-trait = "0.1"
dotenv = "0.15"
